--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,122 @@
 
     <string name="max_fixed_error_message"> Máximo de cartas fixas atingido</string>
 
+    <string name="archers"> Arqueiras</string>
+    <string name="archers_description"> Um par de atacantes à distância com armadura leve. Elas ajudam na batalha contra unidades terrestres e aéreas, mas colorir seu cabelo é por sua própria conta.</string>
+    <string name="baby_dragon"> Dragão filhote</string>
+    <string name="baby_dragon_description"> Uma tropa voadora que causa dano em área. Bebês dragões nascem fofos, famintos e prontos para um churrasco.</string>
+    <string name="barbarians"> Bárbaros</string>
+    <string name="barbarians_description"> Uma horda de atacantes de corpo a corpo com bigodes terríveis e temperamentos piores ainda.</string>
+    <string name="bomber"> Bombardeiro</string>
+    <string name="bomber_description"> Pequeno e levemente protegido, um esqueleto que lança bombas. Dano que pode acabar com uma horda de inimigos.</string>
+    <string name="bowler"> Lançador</string>
+    <string name="bowler_description"> Este grandalhão azul gosta das coisas boas da vida: drinques com Elixir Negro e atirar pedras. Suas pedras enormes passam por cima do alvo , acertando tudo que estiver atrás!</string>
+    <string name="ballon"> Balão</string>
+    <string name="ballon_description"> Por mais bonitos que sejam, você não vai querer ver uma fileira deles aparecendo no horizonte. Eles lançam bombas potentes e quando derrubados, causam dano em área.</string>
+    <string name="dark_prince"> Principe das trevas</string>
+    <string name="dark_prince_description"> O Principe das Trevas causa dano em área e deixa seu amigo espinhento resolver tudo, porque, quando ele fala, parece ter um balde na cabeça.</string>
+    <string name="fire_spirits"> Espiritos de fogo</string>
+    <string name="fire_spirits_description"> Esses três Espíritos de Fogo estão e uma missão Kamikaze para dar um abraço quentinho em você. Seria uma delícia se eles não estivessem pegando fogo</string>
+    <string name="giant"> Gigante</string>
+    <string name="giant_description"> Lento, mas duradouro, só ataca as construções. Um verdadeiro exército de um homem</string>
+    <string name="giant_skeleton"> Esqueleto gigante</string>
+    <string name="giant_skeleton_description"> Quanto maior o esqueleto, maior a bomba. Carrega uma bomba que explode quando o esqueleto gigante morre.</string>
+    <string name="goblins"> Goblins</string>
+    <string name="goblins_description"> Três atacantes de corpo a corpo rápidos, sem armaduras. Pequenos, rápidos, verdes e malvados!</string>
+    <string name="golem"> Golem</string>
+    <string name="golem_description"> Lento, porém resistente. Só ataca construções. Ao ser destruído, explode causando dano em área e dividindo-se em dois Golemitas!</string>
+    <string name="guards"> Guardas</string>
+    <string name="guards_description"> Três irmãos esqueléticos e destemidos com escudos. Derrube os escudos e só sobrarão três irmãos esqueléticos e destemidos</string>
+    <string name="hog_rider"> Corredor</string>
+    <string name="hog_rider_description"> Tropa rápida de corpo a corpo que alveja construções e pode pular sobre o rio. Veio para a batalha atendendo ao chamado de outro corredor.</string>
+    <string name="ice_spirit"> Espirito de gelo</string>
+    <string name="ice_spirit_description"> Gera um pequeno Espirito de Gelo para congelar um grupo de inimigos. Fique frio!</string>
+    <string name="knight"> Cavaleiro</string>
+    <string name="knight_description"> Um lutador corpo a corpo duro. Parente próximo do Bárbaro, bonito e elegante. Há rumores de que ele foi nomeado como Cavaleiro, baseiado na elegância do seu bigode único!</string>
+    <string name="lava_hound"> Lava hound</string>
+    <string name="lava_hound_description"> O Lava Hound é uma majestosa fera voadora que ataca construções. Os Lava Pups são bebês irritados e deselegantes, que atacam tudo pela frente</string>
+    <string name="lumberjack"> Lenhador</string>
+    <string name="lumberjack_description"> Ele corta árvores de dia e caça o Tronco à noite. Sua garrafa de fúria vaza por todo lado quando ele morre.</string>
+    <string name="mega_minion"> Megasservo</string>
+    <string name="mega_minion_description"> Voa, tem armadura e grande poder. Sua única fraqueza são bolinhos</string>
+    <string name="miner"> Mineiro</string>
+    <string name="miner_description"> O Mineiro consegue passar por debaixo da terra e aparecer em qualquer lugar da arena. Não é mágica. Chama-se pá!</string>
+    <string name="mini_pekka"> Mini P.E.K.K.A</string>
+    <string name="mini_pekka_description"> A arena é uma zona certificada livre de borboletas. Sem distrações para a P.E.K.K.A, apenas destruição</string>
+    <string name="minions"> Servos</string>
+    <string name="minions_description"> É um pássaro? É um avião? Não, são três atacantes voadores rápidos, sem armaduras, e eles vão acabar com você!</string>
+    <string name="minion_horde"> Horda de servos</string>
+    <string name="minion_horde_description"> Seis atacantes voadores rápidos, sem armadura. Três é demais, seis é uma horda!</string>
+    <string name="musketeer"> Mosqueteira</string>
+    <string name="musketeer_description"> Não deixe se enganar por estes cabelos penteados e delicados, a mosqueteira é bem forte com sua espingarda fiel</string>
+    <string name="pekka"> P.E.K.K.A</string>
+    <string name="pekka_description"> Uma lutadora de corpo a corpo, com armadura pesada e lento. Um pouco desequilibrada, mas com um soco de impacto.</string>
+    <string name="prince"> Principe</string>
+    <string name="prince_description"> Não se engane com o carinha do pequeno pônei. Quando o príncipe começa a correr, você apropelado. Causa o dobro de dano ao atacar correndo</string>
+    <string name="princess"> Princesa</string>
+    <string name="princess_description"> Atira um monte de flechas flamejantes pela arena. A princesa tem fobia de germes, então mantenha longe dela</string>
+    <string name="royal_giant"> Gigante real</string>
+    <string name="royal_giant_description"> Destruir construções inimigas com seu canhão enorme é seu trabalho. Cuidar da barba loura é sua paixão.</string>
+    <string name="skeletons_army"> Exército de esqueletos</string>
+    <string name="skeletons_army_description"> Invoque um Exército de Esqueletos. Conheça o Larry e seus amigos, Gerry, Terry, Maria e etc...</string>
+    <string name="skeletons"> Esqueletos</string>
+    <string name="skeletons_description"> Quatro lutadores corpo-a-corpo velozes e muito fracos. Enterre seus inimigos nesta pilha ossos!</string>
+    <string name="sparky"> Sparky</string>
+    <string name="sparky_description"> Sparky carrega lentamente, depois causa um dano TREMENDO em área. Sobrecarga é apelido.</string>
+    <string name="spear_goblin"> Goblin lanceiro</string>
+    <string name="spear_goblin_description"> Três atacantes à distancia sem armadura. Quem teve a ideia de ensinar esses caras a atirar essas lanças?!? Que pensou que isto seria uma boa ideia?</string>
+    <string name="three_musketeers"> Três mosqueteiras</string>
+    <string name="three_musketeers_description"> Um trio de mulheres poderosas e independentes que luta por justiça e honra. Desrespeitá-las não seria somente um erro, como também um verdadeiro pecado.</string>
+    <string name="valkyrie"> Valquiria</string>
+    <string name="valkyrie_description"> Uma lutadora corpo a corpo resistente, causa danos na área à sua volta. Bando ou horda, não importa! Ela derruba todos com alguns giros!</string>
+    <string name="witch"> Bruxa</string>
+    <string name="witch_description"> Evoca esqueletos, lança raios terríveis e tem olhos rosa incandescentes que infelizmente não disparam raios laser</string>
+    <string name="wizard"> Mago</string>
+    <string name="wizard_description"> O homem mais impressionante que já pisou na arena, o Mago deixará todos boquiabertos com a sua beleza, ...e/ou bolas de fogo.</string>
+    <string name="ice_wizard"> Mago de gelo</string>
+    <string name="ice_wizard_description"> Este mago vem do Polo Norte e atira gelo nos inimigos para reduzir a velocidade de movimento e ataque deles.</string>
+    <string name="fireball"> Bola de fogo</string>
+    <string name="fireball_description"> Ééééééé... a Bola de Fogo!!! Ela incinera uma pequena área, causando um alto dano. Mas este dano é reduzido em Torres Coroa</string>
+    <string name="arrow"> Flechas</string>
+    <string name="arrow_description"> As Flechas atingir uma grande área provocando dano em tudo que tocar, porém seu dano é reduzido nas Torres.</string>
+    <string name="freeze"> Feitiço de gelo</string>
+    <string name="freeze_description"> Congela tropas e construções, tornando-os incapazes de se mover ou atacar. Todo mundo fica frio.</string>
+    <string name="goblin_barril"> Barril de goblins</string>
+    <string name="goblin_barril_description"> Spawne três goblins em qualquer lugar da Arena. Vai ser um passeio emocionantes rapazes!</string>
+    <string name="lightning"> Relâmpago</string>
+    <string name="lightning_description"> Raios atingem até 3 tropas ou construções com o maior numero de pontos de vida na área de efeito. Dano reduzido à Torre da Coroa.</string>
+    <string name="mirror"> Espelho</string>
+    <string name="mirror_description"> Reproduz a última carta jogada por +1 elixir</string>
+    <string name="poison_spell"> Veneno</string>
+    <string name="poison_spell_description"> Cobre a área com uma toxina grudenta, causando danos e reduzindo a velocidade das tropas e construções. Lembre-se: abusar dos solventes pode matar!</string>
+    <string name="rage"> Fúria</string>
+    <string name="rage_description"> Aumenta a velocidade de movimenento e ataque das tropas. Também faz construções atacar e evocar tropas mais rápido. Atacaaaar!!</string>
+    <string name="rocket"> Foguete</string>
+    <string name="rocket_description"> Causa dano severo em uma área pequena. E de uma forma bem impressionante. Dano reduzido à Torre da Coroa.</string>
+    <string name="the_log"> O tronco</string>
+    <string name="the_log_description"> Uma garrafa de Fúria se quebrou e transformou um tronco inocente no "O Tronco". Agora, ele busca a vingança destruindo tudo no caminho!</string>
+    <string name="zap"> Choque</string>
+    <string name="zap_description"> Relâmpagos eletrocutam inimigos, causando dano em um raio pequeno. Dano reduzido à Torre da Coroa.</string>
+    <string name="barbarian_hut"> Cabana de bárbaros</string>
+    <string name="barbarian_hut_description"> Construção para tropas que mobiliza bárbaros periodicamente para lutar contra o inimigo. Hora de fazer bárbaros.</string>
+    <string name="bomber_tower"> Torre de bombas</string>
+    <string name="bomber_tower_description"> Construção defensiva que aloja um bombardeiro. Causa dano em área a qualquer coisa tola o suficiente para estar perto dele.</string>
+    <string name="cannon"> Canhão</string>
+    <string name="cannon_description"> Uma construção defensiva. Atira balas de canhão de efeito letal, mas não pode alvejar tropas voadoras.</string>
+    <string name="elixir_collector"> Coletor de elixir</string>
+    <string name="elixir_collector_description"> É preciso gastar elixir para fazer elixir</string>
+    <string name="furnace"> Fornalha</string>
+    <string name="furnace_description"> A Fornalha gera dois Espíritos de Fogo ao mesmo tempo. Também faz umas panquecas divinas.</string>
+    <string name="goblin_hut"> Cabana de goblins</string>
+    <string name="goblin_hut_description"> Uma construção que gera Goblins Lanceiros. Mas não olhe lá dentro, você não quer ver como eles são feitos...</string>
+    <string name="inferno_tower"> Torre inferno</string>
+    <string name="inferno_tower_description"> Construção defensiva, cozinha seus alvos e causa danos que aumentam com o tempo. Queima até os maiores e mais resistentes inimigos!</string>
+    <string name="mortar"> Morteiro</string>
+    <string name="mortar_description"> Construção de defesa de longo alcance. Lança projéteis explosivos que causam dano de área. Não pode atingir alvos que chegam muito perto!</string>
+    <string name="tombstone"> Lápide</string>
+    <string name="tombstone_description"> Construção que mobiliza esqueletos periodicamente para lutar contra o inimigo. Ao ser destruída, gera 4 esqueletos. Sinistro</string>
+    <string name="tesla"> Tesla</string>
+    <string name="tesla_description"> Construção defensiva. Quando o Eletruque não estiver aterrorizando o inimigo, sua energia é que deve ser aterrada.</string>
+    <string name="x_bow"> X-besta</string>
+    <string name="x_bow_description"> Que belas torres você tem! Seria uma pena se essa X-Besta acabasse com elas flecha por flecha, do outro lado da arena.</string>
 </resources>
